<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:padding="10dp">

    <Button
        android:id="@+id/add_from_contact_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_from_contacts_button"
        android:onClick="btn_get_contact"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        style="@android:style/TextAppearance.Medium"/>
    <EditText
        android:id="@+id/name"
        android:hint="@string/name_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/phone_text"
        style="@android:style/TextAppearance.Medium"/>
    <EditText
        android:id="@+id/phone"
        android:hint="@string/example_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>

</LinearLayout>